Added navigator status (battery level, online status)

--- a/public/index.html
+++ b/public/index.html
@@ -89,7 +89,7 @@
                 <div class="footer-wrapper">
                     <div class="user-batterinfo">
                         <h2>
-                            <i class="fa-solid fa-battery-full"></i
+                            <i class="fa-solid fa-battery-full user-batteryicon"></i
                             ><span class="batteryinfo-percentage">10%</span>
                         </h2>
                     </div>
@@ -102,6 +102,7 @@
             </footer>
             <!-- ! ------------------------------ Scripts ------------------------------ ! -->
             <script type="module" src="scripts/index.js"></script>
+            <script src="scripts/navigatordata.js"></script>
             <!-- ! ------------------------------ library Scripts ------------------------------ ! -->
             <script src="../node_modules/aos/dist/aos.js"></script>
             <script
