Created the contianer and the layout for the whole app no logic no ui

--- a/public/index.html
+++ b/public/index.html
@@ -45,22 +45,194 @@
                 <div class="main-wrapper">
                     <section class="contact-section">
                         <div class="contact-section-search">
-                            <input type="search" placeholder="Search or start a new chat" />
+                            <input
+                                type="search"
+                                placeholder="Search or start a new chat"
+                                class="contact-search-input"
+                            />
                         </div>
                         <ul class="contact-container">
-                            <li>iric</li>
+                            <li class="contact-infocontainer">
+                                <img
+                                    src="resource/images/thumbnails/image.jpg"
+                                    alt="contact profile picture"
+                                    class="contact-profilepicture"
+                                />
+                                <h3 class="contact-username">Iric Gorgi</h3>
+                                <ul>
+                                    <li class="contact-options"></li>
+                                    <li class="contact-options"></li>
+                                    <li class="contact-options"></li>
+                                </ul>
+                            </li>
+                            <li class="contact-infocontainer">
+                                <img
+                                    src="resource/images/thumbnails/image.jpg"
+                                    alt="contact profile picture"
+                                    class="contact-profilepicture"
+                                />
+                                <h3 class="contact-username">Iric Gorgi</h3>
+                                <ul>
+                                    <li class="contact-options"></li>
+                                    <li class="contact-options"></li>
+                                    <li class="contact-options"></li>
+                                </ul>
+                            </li>
+                            <li class="contact-infocontainer">
+                                <img
+                                    src="resource/images/thumbnails/image.jpg"
+                                    alt="contact profile picture"
+                                    class="contact-profilepicture"
+                                />
+                                <h3 class="contact-username">Iric Gorgi</h3>
+                                <ul>
+                                    <li class="contact-options"></li>
+                                    <li class="contact-options"></li>
+                                    <li class="contact-options"></li>
+                                </ul>
+                            </li>
+                            <li class="contact-infocontainer">
+                                <img
+                                    src="resource/images/thumbnails/image.jpg"
+                                    alt="contact profile picture"
+                                    class="contact-profilepicture"
+                                />
+                                <h3 class="contact-username">Iric Gorgi</h3>
+                                <ul>
+                                    <li class="contact-options"></li>
+                                    <li class="contact-options"></li>
+                                    <li class="contact-options"></li>
+                                </ul>
+                            </li>
+                            <li class="contact-infocontainer">
+                                <img
+                                    src="resource/images/thumbnails/image.jpg"
+                                    alt="contact profile picture"
+                                    class="contact-profilepicture"
+                                />
+                                <h3 class="contact-username">Iric Gorgi</h3>
+                                <ul>
+                                    <li class="contact-options"></li>
+                                    <li class="contact-options"></li>
+                                    <li class="contact-options"></li>
+                                </ul>
+                            </li>
+                            <li class="contact-infocontainer">
+                                <img
+                                    src="resource/images/thumbnails/image.jpg"
+                                    alt="contact profile picture"
+                                    class="contact-profilepicture"
+                                />
+                                <h3 class="contact-username">Iric Gorgi</h3>
+                                <ul>
+                                    <li class="contact-options"></li>
+                                    <li class="contact-options"></li>
+                                    <li class="contact-options"></li>
+                                </ul>
+                            </li>
+                            <li class="contact-infocontainer">
+                                <img
+                                    src="resource/images/thumbnails/image.jpg"
+                                    alt="contact profile picture"
+                                    class="contact-profilepicture"
+                                />
+                                <h3 class="contact-username">Iric Gorgi</h3>
+                                <ul>
+                                    <li class="contact-options"></li>
+                                    <li class="contact-options"></li>
+                                    <li class="contact-options"></li>
+                                </ul>
+                            </li>
+                            <li class="contact-infocontainer">
+                                <img
+                                    src="resource/images/thumbnails/image.jpg"
+                                    alt="contact profile picture"
+                                    class="contact-profilepicture"
+                                />
+                                <h3 class="contact-username">Iric Gorgi</h3>
+                                <ul>
+                                    <li class="contact-options"></li>
+                                    <li class="contact-options"></li>
+                                    <li class="contact-options"></li>
+                                </ul>
+                            </li>
+                            <li class="contact-infocontainer">
+                                <img
+                                    src="resource/images/thumbnails/image.jpg"
+                                    alt="contact profile picture"
+                                    class="contact-profilepicture"
+                                />
+                                <h3 class="contact-username">Iric Gorgi</h3>
+                                <ul>
+                                    <li class="contact-options"></li>
+                                    <li class="contact-options"></li>
+                                    <li class="contact-options"></li>
+                                </ul>
+                            </li>
+                            <li class="contact-infocontainer">
+                                <img
+                                    src="resource/images/thumbnails/image.jpg"
+                                    alt="contact profile picture"
+                                    class="contact-profilepicture"
+                                />
+                                <h3 class="contact-username">Iric Gorgi</h3>
+                                <ul>
+                                    <li class="contact-options"></li>
+                                    <li class="contact-options"></li>
+                                    <li class="contact-options"></li>
+                                </ul>
+                            </li>
+                            <li class="contact-infocontainer">
+                                <img
+                                    src="resource/images/thumbnails/image.jpg"
+                                    alt="contact profile picture"
+                                    class="contact-profilepicture"
+                                />
+                                <h3 class="contact-username">Iric Gorgi</h3>
+                                <ul>
+                                    <li class="contact-options"></li>
+                                    <li class="contact-options"></li>
+                                    <li class="contact-options"></li>
+                                </ul>
+                            </li>
+                            <li class="contact-infocontainer">
+                                <img
+                                    src="resource/images/thumbnails/image.jpg"
+                                    alt="contact profile picture"
+                                    class="contact-profilepicture"
+                                />
+                                <h3 class="contact-username">Iric Gorgi</h3>
+                                <ul>
+                                    <li class="contact-options"></li>
+                                    <li class="contact-options"></li>
+                                    <li class="contact-options"></li>
+                                </ul>
+                            </li>
+                            <li class="contact-infocontainer">
+                                <img
+                                    src="resource/images/thumbnails/image.jpg"
+                                    alt="contact profile picture"
+                                    class="contact-profilepicture"
+                                />
+                                <h3 class="contact-username">Iric Gorgi</h3>
+                                <ul>
+                                    <li class="contact-options"></li>
+                                    <li class="contact-options"></li>
+                                    <li class="contact-options"></li>
+                                </ul>
+                            </li>
                         </ul>
                     </section>
                     <section class="chat-section">
                         <div class="chat-section-header">
                             <div class="chatsec-contact-info">
                                 <img
-                                    src=""
+                                    src="resource/images/thumbnails/image.jpg"
                                     alt="the Contact profile"
                                     class="chatheader-contactprofile"
                                 />
-                                <h3 class="chatheader-contactname"></h3>
-                                <p class="chatheader-contactdetails"></p>
+                                <h3 class="chatheader-contactname">iric</h3>
+                                <p class="chatheader-contactdetails">long ago</p>
                             </div>
                             <div class="chatheader-options">
                                 <div class="chatheader-search">
@@ -71,21 +243,50 @@
                                         placeholder="Your desire massage in chat"
                                     />
                                     <ul class="chatheader-option-container">
-                                        <li class="chatoptions-contact-info"></li>
-                                        <li class="chatoptions-clearmassages"></li>
-                                        <li class="chatoptions-muteorunmute"></li>
+                                        <li class="chatoptions-contact-info">
+                                            <i class="fa-solid fa-info"></i>Info
+                                        </li>
+                                        <li class="chatoptions-clearmassages">
+                                            <i class="fa-solid fa-bell"></i>Notification
+                                        </li>
+                                        <li class="chatoptions-muteorunmute">
+                                            <i class="fa-solid fa-comment-slash"></i>Clear Chat
+                                        </li>
                                     </ul>
                                 </div>
                             </div>
                         </div>
-                        <ul class="chat-container">
-                            <li>iric in chat</li>
-                        </ul>
+                        <div class="chat-massage-displaycontainer">
+                            <ul class="chat-massage-container">
+                                <li class="chat-massagecontainer">
+                                    <h4 class="chat-massagetext">iric</h4>
+                                    <p class="chat-massagetime">gorgi</p>
+                                    <!-- <ul>
+                                    <li class="chat-massage-hoveroptions"></li>
+                                    <li class="chat-massage-hoveroptions"></li>
+                                    <li class="chat-massage-hoveroptions"></li>
+                                    <li class="chat-massage-hoveroptions"></li>
+                                </ul> -->
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="chat-massage-input-container">
+                            <div class="chat-massage-sticker">
+                                <i class="fa-solid fa-face-laugh-beam"></i>
+                            </div>
+                            <div class="chat-massage-fileupload">
+                                <i class="fa-solid fa-upload"></i>
+                            </div>
+                            <form>
+                                <input type="text" class="chat-massage-input" />
+                                <button class="chat-massage-submit" type="button">Arrow</button>
+                            </form>
+                        </div>
                     </section>
                 </div>
             </main>
             <!-- ! ------------------------------ Footer ------------------------------ ! -->
-            <footer class="footer">
+            <!-- <footer class="footer">
                 <div class="footer-wrapper">
                     <div class="user-batterinfo">
                         <h2>
@@ -99,7 +300,7 @@
                     </div>
                     <div class="user-onlinestate"></div>
                 </div>
-            </footer>
+            </footer> -->
             <!-- ! ------------------------------ Scripts ------------------------------ ! -->
             <script type="module" src="scripts/index.js"></script>
             <script src="scripts/navigatordata.js"></script>
