--- a/public/index.html
+++ b/public/index.html
@@ -288,7 +288,7 @@
                             <div class="chat-massage-fileupload">
                                 <i class="fa-solid fa-upload"></i>
                             </div>
-                            <form>
+                            <form class="chat-massage-form">
                                 <input type="text" class="chat-massage-input" />
                                 <button class="chat-massage-submit" type="button">Arrow</button>
                             </form>
@@ -298,20 +298,12 @@
             </main>
             <!-- ! ------------------------------ Scripts ------------------------------ ! -->
             <script type="module" src="scripts/index.js"></script>
-            <script src="scripts/navigatordata.js"></script>
             <!-- ! ------------------------------ library Scripts ------------------------------ ! -->
             <script src="../node_modules/aos/dist/aos.js"></script>
             <script
                 src="https://kit.fontawesome.com/9c345a79fa.js"
                 crossorigin="anonymous"
             ></script>
-            <!-- <script src="../node_modules/@popperjs/core/dist/umd/popper.min.js"></script>
-    <script>
-      const btn = document.querySelector("#btn");
-      Popper.createPopper(btn, ()=>{
-        placement: 'top';
-      })
-    </script> -->
         </body>
     </div>
 </html>
