Added some style but still no UI

--- a/public/index.html
+++ b/public/index.html
@@ -27,15 +27,10 @@
                 <div class="header-wrapper">
                     <div class="userprofile">
                         <div class="userprofile-picture">
-                            <img src="" alt="user profile picture" />
+                            <img src="resource/images/logo/chad.jpg" alt="user profile picture" />
                         </div>
                         <div class="userprofile-info">
                             <h2 class="username-display">Iric Gorgi</h2>
-                        </div>
-                    </div>
-                    <div class="chat-options">
-                        <div class="chatoptions-search">
-                            <i class="fa-solid fa-magnifying-glass"></i>
                         </div>
                     </div>
                     <div class="user-batterinfo">
@@ -56,130 +51,15 @@
                 <div class="main-wrapper">
                     <section class="contact-section">
                         <div class="contact-section-search">
-                            <input
-                                type="search"
-                                placeholder="Search or start a new chat"
-                                class="contact-search-input"
-                            />
+                            <form class="contact-searchform">
+                                <input
+                                    type="search"
+                                    placeholder="Search or start a new chat"
+                                    class="contact-search-input"
+                                />
+                            </form>
                         </div>
                         <ul class="contact-container">
-                            <li class="contact-infocontainer">
-                                <img
-                                    src="resource/images/thumbnails/image.jpg"
-                                    alt="contact profile picture"
-                                    class="contact-profilepicture"
-                                />
-                                <h3 class="contact-username">Iric Gorgi</h3>
-                                <ul>
-                                    <li class="contact-options"></li>
-                                    <li class="contact-options"></li>
-                                    <li class="contact-options"></li>
-                                </ul>
-                            </li>
-                            <li class="contact-infocontainer">
-                                <img
-                                    src="resource/images/thumbnails/image.jpg"
-                                    alt="contact profile picture"
-                                    class="contact-profilepicture"
-                                />
-                                <h3 class="contact-username">Iric Gorgi</h3>
-                                <ul>
-                                    <li class="contact-options"></li>
-                                    <li class="contact-options"></li>
-                                    <li class="contact-options"></li>
-                                </ul>
-                            </li>
-                            <li class="contact-infocontainer">
-                                <img
-                                    src="resource/images/thumbnails/image.jpg"
-                                    alt="contact profile picture"
-                                    class="contact-profilepicture"
-                                />
-                                <h3 class="contact-username">Iric Gorgi</h3>
-                                <ul>
-                                    <li class="contact-options"></li>
-                                    <li class="contact-options"></li>
-                                    <li class="contact-options"></li>
-                                </ul>
-                            </li>
-                            <li class="contact-infocontainer">
-                                <img
-                                    src="resource/images/thumbnails/image.jpg"
-                                    alt="contact profile picture"
-                                    class="contact-profilepicture"
-                                />
-                                <h3 class="contact-username">Iric Gorgi</h3>
-                                <ul>
-                                    <li class="contact-options"></li>
-                                    <li class="contact-options"></li>
-                                    <li class="contact-options"></li>
-                                </ul>
-                            </li>
-                            <li class="contact-infocontainer">
-                                <img
-                                    src="resource/images/thumbnails/image.jpg"
-                                    alt="contact profile picture"
-                                    class="contact-profilepicture"
-                                />
-                                <h3 class="contact-username">Iric Gorgi</h3>
-                                <ul>
-                                    <li class="contact-options"></li>
-                                    <li class="contact-options"></li>
-                                    <li class="contact-options"></li>
-                                </ul>
-                            </li>
-                            <li class="contact-infocontainer">
-                                <img
-                                    src="resource/images/thumbnails/image.jpg"
-                                    alt="contact profile picture"
-                                    class="contact-profilepicture"
-                                />
-                                <h3 class="contact-username">Iric Gorgi</h3>
-                                <ul>
-                                    <li class="contact-options"></li>
-                                    <li class="contact-options"></li>
-                                    <li class="contact-options"></li>
-                                </ul>
-                            </li>
-                            <li class="contact-infocontainer">
-                                <img
-                                    src="resource/images/thumbnails/image.jpg"
-                                    alt="contact profile picture"
-                                    class="contact-profilepicture"
-                                />
-                                <h3 class="contact-username">Iric Gorgi</h3>
-                                <ul>
-                                    <li class="contact-options"></li>
-                                    <li class="contact-options"></li>
-                                    <li class="contact-options"></li>
-                                </ul>
-                            </li>
-                            <li class="contact-infocontainer">
-                                <img
-                                    src="resource/images/thumbnails/image.jpg"
-                                    alt="contact profile picture"
-                                    class="contact-profilepicture"
-                                />
-                                <h3 class="contact-username">Iric Gorgi</h3>
-                                <ul>
-                                    <li class="contact-options"></li>
-                                    <li class="contact-options"></li>
-                                    <li class="contact-options"></li>
-                                </ul>
-                            </li>
-                            <li class="contact-infocontainer">
-                                <img
-                                    src="resource/images/thumbnails/image.jpg"
-                                    alt="contact profile picture"
-                                    class="contact-profilepicture"
-                                />
-                                <h3 class="contact-username">Iric Gorgi</h3>
-                                <ul>
-                                    <li class="contact-options"></li>
-                                    <li class="contact-options"></li>
-                                    <li class="contact-options"></li>
-                                </ul>
-                            </li>
                             <li class="contact-infocontainer">
                                 <img
                                     src="resource/images/thumbnails/image.jpg"
@@ -269,15 +149,15 @@
                         </div>
                         <div class="chat-massage-displaycontainer">
                             <ul class="chat-massage-container">
-                                <li class="chat-massagecontainer">
+                                <li class="chat-massagecontainer user-massage">
                                     <h4 class="chat-massagetext">iric</h4>
                                     <p class="chat-massagetime">gorgi</p>
-                                    <!-- <ul>
-                                    <li class="chat-massage-hoveroptions"></li>
-                                    <li class="chat-massage-hoveroptions"></li>
-                                    <li class="chat-massage-hoveroptions"></li>
-                                    <li class="chat-massage-hoveroptions"></li>
-                                </ul> -->
+                                    <p class="chat-massagedata"></pc>
+                                </li>
+                                <li class="chat-massagecontainer contact-massage">
+                                    <h4 class="chat-massagetext">iric</h4>
+                                    <p class="chat-massagetime">gorgi</p>
+                                    <p class="chat-massagedata"></pc>
                                 </li>
                             </ul>
                         </div>
