Added a IndexedDB for photos and large files

--- a/public/index.html
+++ b/public/index.html
@@ -116,8 +116,8 @@
                     </section>
                     <section class="chat-section">
                         <div class="chat-section-header">
-                            <div class="chatsec-contact-info">
-                                <img
+                            <div class="cha
+                                <imgtsec-contact-info">
                                     src="resource/images/thumbnails/image.jpg"
                                     alt="the Contact profile"
                                     class="chatheader-contactprofile"
@@ -156,7 +156,7 @@
                                 </li>
                                 <li class="chat-massagecontainer contact-massage">
                                     <h4 class="chat-massagetext">iric</h4>
-                                    <p class="chat-massagetime">gorgi</p>
+                                    <p class="chat-massagetimeanddate">gorgi</p>
                                     <p class="chat-massagedata"></pc>
                                 </li>
                             </ul>
