--- a/src/index.html
+++ b/src/index.html
@@ -5,10 +5,8 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Chat Here</title>
-        <!-- ! ------------------------------ Css Style ------------------------------ ! -->
-        <link rel="stylesheet" href="styles/style.css" />
         <!-- ! ------------------------------ Favicon ------------------------------ ! -->
-        <link rel="shortcut icon" type="image/jpg" href="resource/images/favicon/favicon.png" />
+        <link rel="shortcut icon" type="image/jpg" href="./resource/images/thumbnails/image.jpg" />
         <link href="assest/resource/images/favicon/Braingame-Favicon.png" rel="shortcut icon" />
         <!-- ! ------------------------------ Google Font ------------------------------ ! -->
         <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -116,11 +114,12 @@
                     </section>
                     <section class="chat-section">
                         <div class="chat-section-header">
-                            <div class="cha
-                                <imgtsec-contact-info">
+                            <div class="chatsec-contact-info">
+                                <img
                                     src="resource/images/thumbnails/image.jpg"
                                     alt="the Contact profile"
                                     class="chatheader-contactprofile"
+                                />
                                 />
                                 <h3 class="chatheader-contactname">iric</h3>
                                 <p class="chatheader-contactdetails">long ago</p>
@@ -152,12 +151,12 @@
                                 <li class="chat-massagecontainer user-massage">
                                     <h4 class="chat-massagetext">iric</h4>
                                     <p class="chat-massagetime">gorgi</p>
-                                    <p class="chat-massagedata"></pc>
+                                    <p class="chat-massagedata"></p>
                                 </li>
                                 <li class="chat-massagecontainer contact-massage">
                                     <h4 class="chat-massagetext">iric</h4>
                                     <p class="chat-massagetimeanddate">gorgi</p>
-                                    <p class="chat-massagedata"></pc>
+                                    <p class="chat-massagedata"></p>
                                 </li>
                             </ul>
                         </div>
@@ -177,7 +176,7 @@
                 </div>
             </main>
             <!-- ! ------------------------------ Scripts ------------------------------ ! -->
-            <script type="module" src="scripts/index.js"></script>
+            <script type="module" src="/main.js"></script>
             <!-- ! ------------------------------ library Scripts ------------------------------ ! -->
             <script src="../node_modules/aos/dist/aos.js"></script>
             <script
