Updated photo urls in html and changed resources to assets

--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Chat Here</title>
         <!-- ! ------------------------------ Favicon ------------------------------ ! -->
-        <link rel="shortcut icon" type="image/jpg" href="./resource/images/thumbnails/image.jpg" />
-        <link href="assest/resource/images/favicon/Braingame-Favicon.png" rel="shortcut icon" />
+        <link rel="shortcut icon" type="image/jpg" href="./assets/images/thumbnails/image.jpg" />
+        <link href="assest/assets/images/favicon/Braingame-Favicon.png" rel="shortcut icon" />
         <!-- ! ------------------------------ Google Font ------------------------------ ! -->
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -25,7 +25,7 @@
                 <div class="header-wrapper">
                     <div class="userprofile">
                         <div class="userprofile-picture">
-                            <img src="resource/images/logo/chad.jpg" alt="user profile picture" />
+                            <img src="assets/images/logo/chad.jpg" alt="user profile picture" />
                         </div>
                         <div class="userprofile-info">
                             <h2 class="username-display">Iric Gorgi</h2>
@@ -60,7 +60,7 @@
                         <ul class="contact-container">
                             <li class="contact-infocontainer">
                                 <img
-                                    src="resource/images/thumbnails/image.jpg"
+                                    src="assets/images/thumbnails/image.jpg"
                                     alt="contact profile picture"
                                     class="contact-profilepicture"
                                 />
@@ -73,7 +73,7 @@
                             </li>
                             <li class="contact-infocontainer">
                                 <img
-                                    src="resource/images/thumbnails/image.jpg"
+                                    src="assets/images/thumbnails/image.jpg"
                                     alt="contact profile picture"
                                     class="contact-profilepicture"
                                 />
@@ -86,7 +86,7 @@
                             </li>
                             <li class="contact-infocontainer">
                                 <img
-                                    src="resource/images/thumbnails/image.jpg"
+                                    src="assets/images/thumbnails/image.jpg"
                                     alt="contact profile picture"
                                     class="contact-profilepicture"
                                 />
@@ -99,7 +99,7 @@
                             </li>
                             <li class="contact-infocontainer">
                                 <img
-                                    src="resource/images/thumbnails/image.jpg"
+                                    src="assets/images/thumbnails/image.jpg"
                                     alt="contact profile picture"
                                     class="contact-profilepicture"
                                 />
@@ -116,7 +116,7 @@
                         <div class="chat-section-header">
                             <div class="chatsec-contact-info">
                                 <img
-                                    src="resource/images/thumbnails/image.jpg"
+                                    src="assets/images/thumbnails/image.jpg"
                                     alt="the Contact profile"
                                     class="chatheader-contactprofile"
                                 />
